changed removed whitespace and back link, fixed header on location dashboard

--- a/src/app/AdminNavView/LocationPage/page.module.css
+++ b/src/app/AdminNavView/LocationPage/page.module.css
@@ -1,14 +1,24 @@
 .container {
-  padding: 20px;
+  padding: 1.5em 0em;
   max-width: 1200px;
   margin: 0 auto;
 
 }
+
+.wrapper {
+  background-color: #f7f9fc;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  padding: 2em 4em;
+  color: #072b68;
+}
+.headerText {
+  font-size: 2.25em;
+  font-weight: bold;
 }
 
 .newLocationButton {
@@ -158,6 +168,7 @@
   border: 1px solid #0F7AFF;
   border-radius: 69px;
   overflow: hidden;
+  background-color: #fff;
 }
 
 .searchIcon {
